syntax = "proto3";

package erda.msp.configcenter;
option go_package = "github.com/erda-project/erda-proto-go/msp/configcenter/pb";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "common/openapi.proto";

service ConfigCenterService {
  option (erda.common.openapi_service) = {
    service: "msp",
    auth: {
      check_login: true,
      check_token: true,
    }
  };

  rpc GetGroups (GetGroupRequest) returns (GetGroupResponse)  {
    option (google.api.http) = {
      get: "/api/msp/config/tenants/{tenantID}/groups?pageNo={pageNum}",
    };
    option (erda.common.openapi) = {
      path: "/api/config/tenants/{tenantID}/groups"
    };
  }

  rpc GetGroupProperties (GetGroupPropertiesRequest) returns (GetGroupPropertiesResponse)  {
    option (google.api.http) = {
      get: "/api/msp/config/tenants/{tenantID}/groups/{groupID}",
    };
    option (erda.common.openapi) = {
      path: "/api/config/tenants/{tenantID}/groups/{groupID}"
    };
  }

  rpc SaveGroupProperties (SaveGroupPropertiesRequest) returns (SaveGroupPropertiesResponse)  {
    option (google.api.http) = {
      post: "/api/msp/config/tenants/{tenantID}/groups/{groupID}",
      body: "properties",
    };
    option (erda.common.openapi) = {
      path: "/api/config/tenants/{tenantID}/groups/{groupID}"
    };
  }
}

// GetGroups
message GetGroupRequest {
  string tenantID = 1 [(validator.field) = {string_not_empty: true}];
  string keyword  = 2;
  int64  pageNum  = 3 [(validator.field) = {int_gt: 0}];
  int64  pageSize = 4 [(validator.field) = {int_gt: 0}];
}

message GetGroupResponse {
  Groups data = 1;
}

message Groups {
  int64           total = 1;
  repeated string list  = 2;
}

// GetGroupProperties
message GetGroupPropertiesRequest {
  string tenantID = 1 [(validator.field) = {string_not_empty: true}];
  string groupID  = 2 [(validator.field) = {string_not_empty: true}];
}

message GetGroupPropertiesResponse {
  repeated GroupProperties data = 1;
}

// SaveGroupProperties
message SaveGroupPropertiesRequest {
  string            tenantID   = 1 [(validator.field) = {string_not_empty: true}];
  string            groupID    = 2 [(validator.field) = {string_not_empty: true}];
  repeated Property properties = 3;
}

message SaveGroupPropertiesResponse {
  bool data = 1;
}

message GroupProperties {
  string            group      = 1;
  repeated Property properties = 2;
}

message Property {
  string key    = 1;
  string value  = 2;
  string source = 3;
}